--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.2.14",
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
