--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^9.2.0",
+    "react-type-animation": "^3.2.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "sonner": "^2.0.7",
